# torch_perfetto_logger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  register_perfetto_logger.cpp  setup.py
src/: InterningState.h  PerfettoLogger.cpp  PerfettoLogger.h
test/: test_perfetto_logger.cpp
